tests/integration/snapshots/integration__conformance__n_structure_no_data.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 

stdout --- 
<empty>
stderr --- 
error: expected json value, found no significant characters
 --> stdin:1:1
  |
1 |
  | ^
  |
help: insert a placeholder value
  |
1 |  "rust is a must"
  |
